# cloudtool

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
base/: CMakeLists.txt  cloud.cpp  cloud.h  cloudlist.cpp  cloudlist.h  cloudtable.cpp  cloudtable.h  cloudtree.cpp  cloudtree.h  cloudview.cpp  cloudview.h  common.cpp  common.h  console.cpp  console.h  customdialog.h  customdock.h  customtree.cpp  customtree.h  export.h  exports.h  fileio.cpp  fileio.h  types.h
base/test/: CMakeLists.txt  test_cloudview.cpp
camera/Photoneo/examples/ApplyCustomProjection/: ApplyCustomProjectionExample.cpp  CMakeLists.txt  ReadMe.txt
camera/Photoneo/examples/ChangeSettings/: CMakeLists.txt  ChangeSettingsExample.cpp  ReadMe.txt
camera/Photoneo/examples/ExternalCamera/: CMakeLists.txt  ExternalCameraExample.cpp  ReadMe.txt
camera/Photoneo/examples/ExternalCamera/Settings/: MarkersPositions.txt
camera/Photoneo/examples/GetISCalibParams/: CMakeLists.txt  GetISCalibParamsExample.cpp  ReadMe.txt
camera/Photoneo/examples/GetProfiles/: CMakeLists.txt  GetProfilesExample.cpp  ReadMe.txt
camera/Photoneo/examples/GetTemperatures/: CMakeLists.txt  GetTemperaturesExample.cpp  ReadMe.txt
camera/Photoneo/examples/MinimalOpencv/: CMakeLists.txt  MinimalOpenCVExample.cpp  ReadMe.txt
camera/Photoneo/examples/MinimalPcl/: CMakeLists.txt  MinimalPclExample.cpp  ReadMe.txt
camera/Photoneo/examples/ReadPointCloud/: CMakeLists.txt  ReadMe.txt  ReadPointCloudExample.cpp
camera/Photoneo/examples/RotatedCalibration/: CMakeLists.txt  ReadMe.txt  RotatedCalibrationAPIExample.cpp
camera/Photoneo/examples/TwoScannersMultithread/: CMakeLists.txt  ReadMe.txt  TwoScannersMultithreadExample.cpp
camera/Photoneo/include/: PhoXiAdditionalCamera.h  PhoXiDataTypes.h  PhoXiFeatureList.h  PhoXiOpenCVSupport.h
camera/Photoneo/lib/: PhoXi_API_msvc14_Debug_1.4.1.lib  PhoXi_API_msvc14_Release_1.4.1.lib
camera/PhotoneoSDK/include/: PhoXi.h  PhoXiCompilerDefines.h  PhoXiFeature.h  PhoXiFeature.hpp  PhoXiFeatureTypes.h  PhoXiInterface.h  PhoXiPCLSupport.h
cloudtool/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
cloudtool/common/: customwidget.h  resource.h  transforms.h
cloudtool/device/: azurekinect.cpp  azurekinect.h  azurekinect.ui  photoneo.cpp  photoneo.h  photoneo.ui
cloudtool/edit/: boundary.cpp  boundary.h  boundary.ui  boundingbox.cpp  boundingbox.h  boundingbox.ui  color.cpp  color.h  color.ui  coordinate.cpp  coordinate.h  coordinate.ui  normals.cpp  normals.h  normals.ui  scale.cpp  scale.h  scale.ui  transformation.cpp  transformation.h  transformation.ui
cloudtool/help/: about.cpp  about.h  about.ui  shortcutkey.cpp  shortcutkey.h  shortcutkey.ui
cloudtool/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
cloudtool/resources/: res.qrc
cloudtool/resources/clouds/: plant.ply  rabbit.pcd
cloudtool/resources/theme/: dark.qss  light.qss  origin.qss
cloudtool/resources/trans/: zh_CN.qm  zh_CN.ts
cloudtool/setting/: setting.cpp  setting.h  setting.ui
cloudtool/tool/: boundary.cpp  boundary.h  boundary.ui  cutting.cpp  cutting.h  cutting.ui  descriptor.cpp  descriptor.h  descriptor.ui  filters.cpp  filters.h  filters.ui  filters.ui.autosave  keypoints.cpp  keypoints.h  keypoints.ui  pickpoints.cpp  pickpoints.h  pickpoints.ui  rangeimage.cpp  rangeimage.h  rangeimage.ui  registration.cpp  registration.h  registration.ui  sampling.cpp  sampling.h  sampling.ui  segmentation.cpp  segmentation.h  segmentation.ui  surface.cpp  surface.h  surface.ui
cloudtool/tools/: filters.cpp  filters.h  filters.ui  keypoints.cpp  keypoints.h  keypoints.ui
data/: camparam-00-32-03.cam  milk.pcd  rabbit-source.ply  rabbit-target.ply
lib/: ct_base.lib  ct_based.lib  ct_modules.lib  ct_modulesd.lib
module/: CMakeLists.txt  fileio.cpp  fileio.h
modules/: CMakeLists.txt  features.cpp  features.h  filters.cpp  filters.h  keypoints.cpp  keypoints.h  recognition.cpp  recognition.h  registration.cpp  registration.h  segmentation.cpp  segmentation.h  surface.cpp  surface.h
temp/01/common/: cloud.h  cloudtree.cpp  cloudtree.h  console.cpp  console.h  customdock.h  customtree.h  imagetree.cpp  imagetree.h  imageview.h  tool.h
temp/01/modules/: common.cpp  common.h  features.cpp  features.h  filter.cpp  filter.h  registration.cpp  registration.h  sampling.cpp  sampling.h  segmentation.cpp  segmentation.h  surface.cpp  surface.h  tree.cpp  tree.h
temp/01/panel/: about.ui  boundingbox.cpp  boundingbox.h  boundingbox.ui  calibration.cpp  calibration.h  calibration.ui  colors.cpp  colors.h  colors.ui  coords.cpp  coords.h  coords.ui  cutting.cpp  cutting.h  cutting.ui  descriptor.cpp  descriptor.h  devicekinectdk.cpp  devicekinectdk.h  devicekinectdk.ui  devicezhisensor.cpp  devicezhisensor.h  devicezhisensor.ui  filters.cpp  filters.h  filters.ui  measure.cpp  measure.h  normals.cpp  normals.h  normals.ui  pointpick.cpp  pointpick.h  pointpick.ui  registrations.cpp  registrations.h  registrations.ui  samplings.cpp  samplings.h  (+17 more)
temp/02/common/: cloud.h  cloudtree.cpp  cloudtree.h  cloudview.cpp  cloudview.h  console.cpp  console.h  customdock.h  customtree.h  customtype.h  graphicsview.cpp  graphicsview.h  image.h  imagetree.cpp  imagetree.h  modeltree.cpp  modeltree.h  processtree.cpp  processtree.h  tool.h
temp/02/modules/: common.cpp  common.h  features.cpp  features.h  fileio.cpp  fileio.h  filters.cpp  filters.h  graphicseffect.cpp  graphicseffect.h  keypoints.cpp  keypoints.h  recognitions.cpp  recognitions.h  registrations.cpp  registrations.h  samplings.cpp  samplings.h  segmentations.cpp  segmentations.h  surfaces.cpp  surfaces.h  tree.cpp  tree.h
temp/02/panel/: about.ui  boundingbox.cpp  boundingbox.h  boundingbox.ui  calibration.cpp  calibration.h  calibration.ui  color.cpp  color.h  color.ui  (+74 more)
test/: CMakeLists.txt
test/cloudlist/: CMakeLists.txt  test_cloudlist.cpp
test/cloudtable/: CMakeLists.txt  test_cloudtable.cpp
test/cloudtree/: CMakeLists.txt  test_cloudlist.cpp  test_cloudtree.cpp
test/cloudview/: CMakeLists.txt  test_cloudview.cpp
(+82 files in other folders)
